# nt-gov-hack

./: README.md  australian_agency_budget.db  budget.db  database.yaml  database_with_details.yaml  employee.db  employee_dataset.db  employee_leave_tracking_data.db  employeeleave.db  eval.py  govassist_hackathon_presentation.md  govassist_presentation.md  ground_truth.yaml  hello.py  inference.py  inference_router.py  net_capital_investment_2024_25.csv.db  pipeline.py  put_details.py  pyproject.toml  router_example.py  staffing_2024_25_budget.db  test_excel_upload.py  test_sample.db  train_csv.py  train_xls.py
.specstory/history/: 2025-08-30_18-10Z-fix-assistant-output-printing-issue.md  2025-08-30_20-46Z-connect-pipeline-py-to-ai-chat.md  2025-08-30_21-57Z-update-pipeline-for-reasoning-and-citations.md
gov_hack_project/: db.sqlite3  manage.py
gov_hack_project/chat/: forms.py  models.py  urls.py  views.py
gov_hack_project/chat/migrations/: 0001_initial.py  0002_dataset_api_key_dataset_api_url_and_more.py
gov_hack_project/chat/templates/chat/: ai_chat.html  base.html  change_password.html  change_password_old.html  dashboard.html  dataset_delete_new.html  dataset_delete_old.html  dataset_detail_new.html  dataset_detail_old.html  dataset_edit.html  dataset_edit_old.html  dataset_list.html  dataset_upload.html  dataset_upload_old.html  home.html  (+6 more)
gov_hack_project/gov_hack_project/: asgi.py  settings.py  urls.py  wsgi.py
gov_hack_project/media/datasets/: BP4_-_Staffing_-_2024-25_Budget.csv  budget.csv  net_capital_investment_2024_25.csv  staffing_2024_25_budget.csv
